--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
     <jsp.api.version>2.1</jsp.api.version>
     <fastjson.version>1.2.31</fastjson.version>
-    <json-lib.version>2.2.3</json-lib.version>
+    <json-lib.version>2.4</json-lib.version>
     <mysql-connector-java.version>5.1.20</mysql-connector-java.version>
     <commons-io.version>2.2</commons-io.version>
     <commons-fileupload.version>1.3</commons-fileupload.version>
@@ -141,11 +141,13 @@
       <version>${fastjson.version}</version>
     </dependency>
 
-    <!--<dependency>-->
-      <!--<groupId>net.sf.json-lib</groupId>-->
-      <!--<artifactId>json-lib</artifactId>-->
-      <!--<version>${json-lib.version}</version>-->
-    <!--</dependency>-->
+
+    <dependency>
+      <groupId>net.sf.json-lib</groupId>
+      <artifactId>json-lib</artifactId>
+      <version>${json-lib.version}</version>
+      <classifier>jdk15</classifier>
+    </dependency>
     <!--jdbc驱动-->
     <dependency>
       <groupId>mysql</groupId>
