--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jsp-api</artifactId>
+      <version>2.0</version>
+      <scope>provided</scope>
+    </dependency>
+
     <!--Spring-->
     <!--spring核心工具包-->
     <dependency>
