--- a/pom.xml
+++ b/pom.xml
@@ -256,6 +256,13 @@
       <artifactId>standard</artifactId>
       <version>1.1.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>core</artifactId>
+      <version>3.2.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
