--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <commons-logging.version>1.2</commons-logging.version>
     <commons-codec.version>1.9</commons-codec.version>
     <commons-beanutils.version>1.9.3</commons-beanutils.version>
+    <alipay-sdk-java.version>3.0.1</alipay-sdk-java.version>
     <commons-collections4.version>4.1</commons-collections4.version>
     <commons-lang3.version>3.4</commons-lang3.version>
     <ezmorph.version>1.0.6</ezmorph.version>
@@ -70,6 +71,7 @@
       <version>2.0</version>
       <scope>provided</scope>
     </dependency>
+
 
     <!--Spring-->
     <!--spring核心工具包-->
@@ -226,6 +228,12 @@
       <artifactId>druid</artifactId>
       <version>${druid.version}</version>
     </dependency>
+   <!--阿里巴巴支付接口-->
+    <dependency>
+      <groupId>com.alipay.sdk</groupId>
+      <artifactId>alipay-sdk-java</artifactId>
+      <version>${alipay-sdk-java.version}</version>
+    </dependency>
 
     <!--mybatis-->
     <dependency>
@@ -257,11 +265,7 @@
       <version>1.1.2</version>
     </dependency>
 
-    <dependency>
-      <groupId>com.google.zxing</groupId>
-      <artifactId>core</artifactId>
-      <version>3.2.0</version>
-    </dependency>
+
 
   </dependencies>
 
